Fix top nav width and margin between scrollbar

--- a/css/styles.css
+++ b/css/styles.css
@@ -78,7 +78,7 @@ nav {
     position: fixed;
     display: flex;
     width: 100vw;
-    min-width: 100%;
+    max-width: 100%;
     height: 8rem;
     padding: 0rem 9.2rem 0 8rem ;
     align-items: center;
